--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_SPOTIFY_REDIRECT_TARGET=http://localhost:3000/spotify/callback
+VITE_AUTH0__DOMAIN="arcticgizmo.au.auth0.com"
+VITE_AUTH0__CLIENT_ID="QfteCBSJNJi7UYshnDcbJUwGN0rUzIH2"
