--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@auth0/auth0-vue": "^2.3.3",
     "@mdi/font": "6.2.95",
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "@vueuse/core": "^10.9.0",
