New spotify implementation (#1)

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-VITE_AUTH0__DOMAIN="arcticgizmo.au.auth0.com"
-VITE_AUTH0__CLIENT_ID="QfteCBSJNJi7UYshnDcbJUwGN0rUzIH2"
+VITE_SPOTIFY_REDIRECT_TARGET=http://localhost:3000/spotify/callback
