--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.34.0",
     "howler": "^2.2.4",
     "roboto-fontface": "*",
+    "thenby": "^1.3.4",
     "vue": "^3.4.21",
     "vue-toast-notification": "^3.1.2",
     "vuetify": "^3.5.8"
