--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@mdi/font": "6.2.95",
+    "@sentry/vite-plugin": "^2.16.1",
+    "@sentry/vue": "^7.112.2",
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "@vueuse/core": "^10.9.0",
     "core-js": "^3.34.0",
